# rustymail

./: Cargo.toml  LICENSE-APACHE  README.md
.github/workflows/: ci.yml
src/: lib.rs  main.rs
tests/api/: health_check.rs
