[package]
name = "rustymail"
authors = ["Nrishinghananda Roy <royrustdev@gmail.com>"]
version = "0.0.1"
edition = "2021"
readme = "README.md"
description = "An Email Newsletter created with rust axum framework"
license = "MIT OR Apache-2.0"
keywords = ["email", "newsletter", "axum"]
categories = ["email", "web-programming"]
repository = "https://github.com/royrustdev/rustymail.git"

[badges]
maintenance = { status = "experimental" }

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "rustymail"

[dependencies]
axum = "0.6.0-rc.2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1.36"
hyper = { version = "0.14", features = ["full"] }

[dev-dependencies]
reqwest = "0.11"